# qtoy

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  vcpkg.json  vd
src/app/: CMakeLists.txt  centralwidget.cpp  centralwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
src/shaders/: CMakeLists.txt  msdf.cpp  shaders.cpp  shaders.h
